--- a/index.html
+++ b/index.html
@@ -1,66 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | [Challenge Name Here]</title>
+	<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
+	<link href="styles/main.css" rel="stylesheet">
+
+	<title>Frontend Mentor | [Challenge Name Here]</title>
 </head>
-<body>
-  Daniel Clifford
-  Verified Graduate
+	<body>
+		<main>
+			<section class="testimonials">
 
-  I received a job offer mid-course, and the subjects I learned were current, if not more so, 
-  in the company I joined. I honestly feel I got every penny’s worth.
+				<div class="testimonial testimonial--1 testimonial--bg-1">
+					<div class="testimonial__author">
+						<img class="author__avatar author__avatar--border" src="images/image-daniel.jpg" alt="An image of Daniel Clifford." >
+						<div class="author__about">
+							<div class="author__name text-color-base-1">Daniel Clifford</div>
+							<div class="author__status text-color-base-1 text-color--opacity-50">Verified Graduate</div>
+						</div>
+					</div>
+					<h1 class="testimonial__header text-color-base-1">
+						I received a job offer mid-course, and the subjects I learned were current, if not more so, 
+						in the company I joined. I honestly feel I got every penny’s worth.
+					</h1>
+					<p class="testimonial_text text-color-base-3 text-color--opacity-70">
+						“ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a 
+						transition and have heard some people who had an amazing experience here. I signed up 
+						for the free intro course and found it incredibly fun! I enrolled shortly thereafter. 
+						The next 12 weeks was the best - and most grueling - time of my life. Since completing 
+						the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”
+					</p>	
+				</div>
 
-  “ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a 
-  transition and have heard some people who had an amazing experience here. I signed up 
-  for the free intro course and found it incredibly fun! I enrolled shortly thereafter. 
-  The next 12 weeks was the best - and most grueling - time of my life. Since completing 
-  the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”
+				<div class="testimonial testimonial--2 testimonial--bg-2">
+					<div class="testimonial__author">
+						<img class="author__avatar" src="images/image-jonathan.jpg" alt="An image of Jonathan Walters." >
+						<div class="author__about">
+							<div class="author__name text-color-base-1">Jonathan Walters</div>
+							<div class="author__status text-color-base-1 text-color--opacity-50">Verified Graduate</div>
+						</div>
+					</div>
+					<h1 class="testimonial__header text-color-base-1">
+						The team was very supportive and kept me motivated
+					</h1>
+					<p class="testimonial_text text-color-base-1 text-color--opacity-70">
+						“ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer 
+						for a big company. This was one of the best investments I’ve made in myself. ”
+					</p>	
+				</div>
 
-  Jonathan Walters
-  Verified Graduate
+				<div class="testimonial testimonial--3 testimonial--bg-4">
+					<div class="testimonial__author">
+						<img class="author__avatar" src="images/image-jeanette.jpg" alt="An image of Jeanette Harmon." >
+						<div class="author__about">
+							<div class="author__name text-color-base-2">Jeanette Harmon</div>
+							<div class="author__status text-color-base-2 text-color--opacity-50">Verified Graduate</div>
+						</div>
+					</div>
+					
+					<h1 class="testimonial__header text-color-base-2">
+						An overall wonderful and rewarding experience
+					</h1>
+					<p class="testimonial_text text-color-base-2 text-color--opacity-70">
+						“ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living 
+						while doing something I love. ”
+					</p>				
+				</div>
 
-  The team was very supportive and kept me motivated
+				<div class="testimonial testimonial--4 testimonial--bg-3">
+					<div class="testimonial__author">
+						<img class="author__avatar author__avatar--border" src="images/image-patrick.jpg" alt="An image of Patrick Abrams." >
+						<div class="author__about">
+							<div class="author__name text-color-base-1">Patrick Abrams</div>
+							<div class="author__status text-color-base-1 text-color--opacity-50">Verified Graduate</div>
+						</div>
+					</div>
+					<h1 class="testimonial__header text-color-base-4">
+						Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and 
+						learning from their experiences was easy.
+					</h1>
+					<p class="testimonial_text text-color-base-1 text-color--opacity-70">
+						“ The staff seem genuinely concerned about my progress which I find really refreshing. The program 
+						gave me the confidence necessary to be able to go out in the world and present myself as a capable 
+						junior developer. The standard is above the rest. You will get the personal attention you need from 
+						an incredible community of smart and amazing people. ”
+					</p>	
+				</div>
 
-  “ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer 
-  for a big company. This was one of the best investments I’ve made in myself. ”
+				<div class="testimonial testimonial--5 testimonial--bg-4">
+					<div class="testimonial__author">
+						<img class="author__avatar" src="images/image-kira.jpg" alt="An image of Kira Whittle." >
+						<div class="author__about">
+							<div class="author__name text-color-base-2">Kira Whittle</div>
+							<div class="author__status text-color-base-2 text-color--opacity-50">Verified Graduate</div>
+						</div>
+					</div>
+					
+					<h1 class="testimonial__header text-color-base-2 ">
+						Such a life-changing experience. Highly recommended!
+					</h1>
+					<p class="testimonial_text text-color-base-2 text-color--opacity-70">
+						“ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from 
+						professionals who can help me learn programming step by step. I was encouraged to enroll by a former 
+						student of theirs who can only say wonderful things about the program. The entire curriculum and staff 
+						did not disappoint. They were very hands-on and I never had to wait long for assistance. The agile team 
+						project, in particular, was outstanding. It took my learning to the next level in a way that no tutorial 
+						could ever have. In fact, I’ve often referred to it during interviews as an example of my developent 
+						experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers. 
+						100% recommend! ”
+					</p>			
+				</div>
 
-  Jeanette Harmon
-  Verified Graduate
-
-  An overall wonderful and rewarding experience
-
-  “ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living 
-  while doing something I love. ”
-
-  Patrick Abrams
-  Verified Graduate
-
-  Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and 
-  learning from their experiences was easy.
-
-  “ The staff seem genuinely concerned about my progress which I find really refreshing. The program 
-  gave me the confidence necessary to be able to go out in the world and present myself as a capable 
-  junior developer. The standard is above the rest. You will get the personal attention you need from 
-  an incredible community of smart and amazing people. ”
-
-  Kira Whittle
-  Verified Graduate
-
-  Such a life-changing experience. Highly recommended!
-
-  “ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from 
-  professionals who can help me learn programming step by step. I was encouraged to enroll by a former 
-  student of theirs who can only say wonderful things about the program. The entire curriculum and staff 
-  did not disappoint. They were very hands-on and I never had to wait long for assistance. The agile team 
-  project, in particular, was outstanding. It took my learning to the next level in a way that no tutorial 
-  could ever have. In fact, I’ve often referred to it during interviews as an example of my developent 
-  experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers. 
-  100% recommend! ”
-  
-</body>
+			</section>
+		</main>
+	</body>
 </html>
